--- a/Week2/Week2.Demo/Week2.EsercitazioneComplex/Week2.EsercitazioneComplex.csproj
+++ b/Week2/Week2.Demo/Week2.EsercitazioneComplex/Week2.EsercitazioneComplex.csproj
@@ -5,4 +5,8 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Week2.ComplexNumber\Week2.ComplexNumber.csproj" />
+  </ItemGroup>
+
 </Project>
